# composition

./: .gitignore  CMakeLists.txt  README.md
docs/: conversionComposition.md
examples/: basic_example.cpp
include/: composition.h  composition.hpp  iterator.h  periodic_table.h
src/: composition.cpp  composition.h  iterator.h  main.cpp  periodic_table.cpp  periodic_table.h
tests/: test_composition.cpp
